Collapsed accordion color fix

--- a/main.css
+++ b/main.css
@@ -18,3 +18,6 @@
     margin-bottom: var(--padding1);
     width: 30px
 }
+.accordion-button {
+    background-color: white !important;
+}
